--- a/environment.yml
+++ b/environment.yml
@@ -1,246 +1,23 @@
 name: egagent
 channels:
   - pytorch
-  - defaults
   - conda-forge
+  - defaults
 dependencies:
-  - _openmp_mutex=4.5=7_kmp_llvm
-  - _python_abi3_support=1.0=hd8ed1ab_2
-  - accelerate=1.12.0=pyhcf101f3_0
-  - aiohappyeyeballs=2.6.1=pyhd8ed1ab_0
-  - aiosignal=1.4.0=pyhd8ed1ab_0
-  - anyio=4.12.1=pyhcf101f3_0
-  - aom=3.9.1=h7bae524_0
-  - attrs=25.4.0=pyhcf101f3_1
-  - aws-c-auth=0.9.3=h1ddaa69_0
-  - aws-c-cal=0.9.13=h6ee9776_1
-  - aws-c-common=0.12.6=hc919400_0
-  - aws-c-compression=0.3.1=h16f91aa_9
-  - aws-c-event-stream=0.5.7=h9ae9c55_1
-  - aws-c-http=0.10.7=h5928ca5_5
-  - aws-c-io=0.23.3=hbe03c90_5
-  - aws-c-mqtt=0.13.3=haf5c5c8_11
-  - aws-c-s3=0.11.3=h8da9771_1
-  - aws-c-sdkutils=0.2.4=h16f91aa_4
-  - aws-checksums=0.2.7=h16f91aa_5
-  - aws-crt-cpp=0.35.4=h74951b9_0
-  - aws-sdk-cpp=1.11.606=h4e1b0f7_10
-  - azure-core-cpp=1.16.2=he5ae378_0
-  - azure-identity-cpp=1.13.3=h810541e_1
-  - azure-storage-blobs-cpp=12.16.0=hc57151b_1
-  - azure-storage-common-cpp=12.12.0=he467506_1
-  - azure-storage-files-datalake-cpp=12.14.0=hf8a9d22_1
-  - backports.zstd=1.3.0=py310h2d60bed_0
-  - brotli-python=1.2.0=py310h6123dab_1
-  - bzip2=1.0.8=hd037594_8
-  - c-ares=1.34.6=hc919400_0
-  - ca-certificates=2026.1.4=hbd8a1cb_0
-  - cairo=1.18.4=he0f2337_1
-  - certifi=2026.01.04=py310hca03da5_0
-  - cffi=2.0.0=py310h73c2a22_1
-  - charset-normalizer=3.4.4=pyhd8ed1ab_0
-  - cpython=3.10.19=py310hd8ed1ab_3
-  - cryptography=46.0.4=py310hd121879_0
-  - datasets=4.5.0=pyhcf101f3_0
-  - dav1d=1.2.1=hb547adb_0
-  - dbus=1.16.2=h3ff7a7c_1
-  - dill=0.4.0=pyhcf101f3_1
-  - distro=1.9.0=py310hca03da5_0
-  - exceptiongroup=1.3.1=pyhd8ed1ab_0
-  - ffmpeg=8.0.1=gpl_hc3c6940_112
-  - filelock=3.20.3=pyhd8ed1ab_0
-  - filetype=1.2.0=py310hca03da5_1
-  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
-  - font-ttf-inconsolata=3.000=h77eed37_0
-  - font-ttf-source-code-pro=2.038=h77eed37_0
-  - font-ttf-ubuntu=0.83=h77eed37_3
-  - fontconfig=2.15.0=h1383a14_1
-  - fonts-conda-ecosystem=1=0
-  - fonts-conda-forge=1=hc364b38_1
-  - freetype=2.14.1=hce30654_0
-  - fribidi=1.0.16=hc919400_0
-  - frozenlist=1.7.0=py310ha18c8e3_0
-  - gdk-pixbuf=2.44.5=h5a2fd1c_0
-  - gflags=2.2.2=hf9b8971_1005
-  - giflib=5.2.2=h93a5062_0
-  - glog=0.7.1=heb240a5_0
-  - glslang=16.2.0=h7cb4797_1
-  - gmp=6.3.0=h7bae524_2
-  - gmpy2=2.2.1=py310h1b1a8f9_2
-  - graphite2=1.3.14=hec049ff_2
-  - h11=0.16.0=pyhcf101f3_1
-  - h2=4.3.0=pyhcf101f3_0
-  - harfbuzz=12.3.2=h3103d1b_0
-  - hf-xet=1.2.1=py310h6ce4931_0
-  - hpack=4.1.0=pyhd8ed1ab_0
-  - httpcore=1.0.9=pyh29332c3_0
-  - httpx=0.28.1=pyhd8ed1ab_0
-  - hyperframe=6.1.0=pyhd8ed1ab_0
-  - icu=78.2=h38cb7af_0
-  - idna=3.11=pyhd8ed1ab_0
-  - jinja2=3.1.6=pyhcf101f3_1
-  - jsonpatch=1.33=py310hca03da5_1
-  - jsonpointer=3.0.0=py310hca03da5_0
-  - krb5=1.21.3=h237132a_0
-  - lame=3.100=h1a8c8d9_1003
-  - langchain-google-genai=4.2.0=pyhd8ed1ab_0
-  - lcms2=2.18=hdfa7624_0
-  - lerc=4.0.0=hd64df32_1
-  - libabseil=20250512.1=cxx17_hd41c47c_0
-  - libarrow=23.0.0=h585ae05_2_cpu
-  - libarrow-acero=23.0.0=h6de58dd_2_cpu
-  - libarrow-compute=23.0.0=h45df96a_2_cpu
-  - libarrow-dataset=23.0.0=h6de58dd_2_cpu
-  - libarrow-substrait=23.0.0=hb5627e6_2_cpu
-  - libass=0.17.4=hcbd7ca7_0
-  - libblas=3.11.0=5_h51639a9_openblas
-  - libbrotlicommon=1.2.0=hc919400_1
-  - libbrotlidec=1.2.0=hc919400_1
-  - libbrotlienc=1.2.0=hc919400_1
-  - libcblas=3.11.0=5_hb0561ab_openblas
-  - libcrc32c=1.1.2=hbdafb3b_0
-  - libcurl=8.18.0=he38603e_0
-  - libcxx=21.1.8=h55c6f16_2
-  - libdeflate=1.25=hc11a715_0
-  - libedit=3.1.20250104=pl5321hafb1f1b_0
-  - libev=4.33=h93a5062_2
-  - libevent=2.1.12=h2757513_1
-  - libexpat=2.7.3=haf25636_0
-  - libffi=3.5.2=hcf2aa1b_0
-  - libfreetype=2.14.1=hce30654_0
-  - libfreetype6=2.14.1=h6da58f4_0
-  - libgcc=15.2.0=hcbb3090_17
-  - libgfortran=15.2.0=h07b0088_17
-  - libgfortran5=15.2.0=hdae7583_17
-  - libglib=2.86.3=hfe11c1f_0
-  - libgoogle-cloud=2.39.0=head0a95_0
-  - libgoogle-cloud-storage=2.39.0=hfa3a374_0
-  - libgrpc=1.73.1=h3063b79_1
-  - libhwloc=2.12.2=default_ha3cc4f2_1000
-  - libhwy=1.3.0=h48b13b8_1
-  - libiconv=1.18=h23cfdf5_2
-  - libintl=0.25.1=h493aca8_0
-  - libjpeg-turbo=3.1.2=hc919400_0
-  - libjxl=0.11.1=h913acd8_8
-  - liblapack=3.11.0=5_hd9741b5_openblas
-  - liblzma=5.8.2=h8088a28_0
-  - libnghttp2=1.67.0=hc438710_0
-  - libogg=1.3.5=h48c0fde_1
-  - libopenblas=0.3.30=pthreads_h735b822_4
-  - libopentelemetry-cpp=1.21.0=he15edb5_1
-  - libopentelemetry-cpp-headers=1.21.0=hce30654_1
-  - libopenvino=2025.4.1=h3e6d54f_1
-  - libopenvino-arm-cpu-plugin=2025.4.1=h3e6d54f_1
-  - libopenvino-auto-batch-plugin=2025.4.1=h2406d2e_1
-  - libopenvino-auto-plugin=2025.4.1=h2406d2e_1
-  - libopenvino-hetero-plugin=2025.4.1=h85cbfa6_1
-  - libopenvino-ir-frontend=2025.4.1=h85cbfa6_1
-  - libopenvino-onnx-frontend=2025.4.1=h7fb59aa_1
-  - libopenvino-paddle-frontend=2025.4.1=h7fb59aa_1
-  - libopenvino-pytorch-frontend=2025.4.1=hf6b4638_1
-  - libopenvino-tensorflow-frontend=2025.4.1=hf92d75f_1
-  - libopenvino-tensorflow-lite-frontend=2025.4.1=hf6b4638_1
-  - libopus=1.6.1=h1a92334_0
-  - libparquet=23.0.0=hcc2992d_2_cpu
-  - libpng=1.6.55=h132b30e_0
-  - libprotobuf=6.31.1=h98f38fd_4
-  - libre2-11=2025.11.05=h91c62da_0
-  - librsvg=2.60.0=h5c55ec3_0
-  - libsqlite=3.51.2=h1ae2325_0
-  - libssh2=1.11.1=h1590b86_0
-  - libthrift=0.22.0=h14a376c_1
-  - libtiff=4.7.1=h4030677_1
-  - libusb=1.0.29=hbc156a2_0
-  - libutf8proc=2.11.3=h2431656_0
-  - libvorbis=1.3.7=h81086ad_2
-  - libvpx=1.15.2=ha759d40_0
-  - libvulkan-loader=1.4.341.0=h3feff0a_0
-  - libwebp=1.6.0=hc0253d1_0
-  - libwebp-base=1.6.0=h07db88b_0
-  - libxcb=1.17.0=hdb1d25a_0
-  - libxml2=2.15.1=h8d039ee_1
-  - libxml2-16=2.15.1=h5ef1a60_1
-  - libzlib=1.3.1=h8359307_2
-  - llvm-openmp=15.0.7=h7cfbb63_0
-  - lz4-c=1.10.0=h286801f_1
-  - markupsafe=3.0.3=py310hf4fd40f_0
-  - mpc=1.3.1=h8f1351a_1
-  - mpfr=4.2.1=hb693164_3
-  - mpmath=1.3.0=pyhd8ed1ab_1
-  - multidict=6.7.0=py310hdf731dd_0
-  - multiprocess=0.70.18=py310hf151d32_2
-  - ncurses=6.5=h5e97a16_3
-  - networkx=3.4.2=pyh267e887_2
-  - nlohmann_json=3.12.0=h784d473_1
-  - openh264=2.6.0=hb5b2745_0
-  - openjpeg=2.5.4=hbfb3c88_0
-  - openssl=3.6.1=hd24854e_1
-  - orc=2.2.2=hac85105_0
-  - packaging=26.0=pyhcf101f3_0
-  - pandas=2.3.3=py310h25f4b65_1
-  - pango=1.56.4=h875632e_0
-  - pcre2=10.47=h30297fc_0
-  - pillow=12.1.0=py310hc037f36_0
-  - pip=26.0.1=pyh8b19718_0
-  - pixman=0.46.4=h81086ad_1
-  - prometheus-cpp=1.3.0=h0967b3e_0
-  - psutil=7.2.2=py310haea493c_0
-  - pthread-stubs=0.4=hd74edd7_1002
-  - pugixml=1.15=hd3d436d_0
-  - pyarrow=23.0.0=py310hb6292c7_0
-  - pyarrow-core=23.0.0=py310h290718d_0_cpu
-  - pyasn1=0.6.2=py310hca03da5_0
-  - pyasn1-modules=0.4.2=py310hca03da5_0
-  - pyopenssl=25.3.0=py310hc20e4cf_0
-  - pysocks=1.7.1=pyha55dd90_7
-  - python=3.10.19=hcd7f573_3_cpython
-  - python-dateutil=2.9.0.post0=pyhe01879c_2
-  - python-gil=3.10.19=hd8ed1ab_3
-  - python-tzdata=2025.3=pyhd8ed1ab_0
-  - python-xxhash=3.6.0=py310h36bdd5b_1
-  - python_abi=3.10=8_cp310
-  - pytorch=2.5.1=py3.10_0
-  - pytz=2025.2=pyhd8ed1ab_0
-  - pyyaml=6.0.3=py310hb46c203_1
-  - re2=2025.11.05=h64b956e_0
-  - readline=8.3=h46df422_0
-  - requests=2.32.5=pyhcf101f3_1
-  - requests-toolbelt=1.0.0=py310hca03da5_0
-  - safetensors=0.7.0=py310h53169e7_0
-  - scipy=1.15.2=py310h32ab4ed_0
-  - sdl2=2.32.56=h248ca61_0
-  - sdl3=3.4.0=h6fa9c73_0
-  - setuptools=82.0.0=pyh332efcf_0
-  - shaderc=2025.5=hf31e910_1
-  - shellingham=1.5.4=pyhd8ed1ab_2
-  - six=1.17.0=pyhe01879c_1
-  - snappy=1.2.2=hada39a4_1
-  - sniffio=1.3.1=pyhd8ed1ab_2
-  - spirv-tools=2026.1=h4ddebb9_0
-  - svt-av1=4.0.1=h0cb729a_0
-  - tbb=2022.3.0=h4ddebb9_2
-  - tenacity=9.1.2=py310hca03da5_1
-  - tk=8.6.13=h010d191_3
-  - torchaudio=2.5.1=py310_cpu
-  - torchvision=0.20.1=py310_cpu
-  - tqdm=4.67.3=pyh8f84b5b_0
-  - typer-slim=0.21.1=pyhcf101f3_0
-  - typing-extensions=4.15.0=h396c80c_0
-  - typing_extensions=4.15.0=pyhcf101f3_0
-  - tzdata=2025c=hc9c84f9_1
-  - urllib3=2.6.3=pyhd8ed1ab_0
-  - uuid-utils=0.12.0=py310h931abed_0
-  - websockets=15.0.1=py310h80987f9_0
-  - wheel=0.46.3=pyhd8ed1ab_0
-  - x264=1!164.3095=h57fd34a_2
-  - x265=3.5=hbc6ce65_3
-  - xorg-libxau=1.0.12=hc919400_1
-  - xorg-libxdmcp=1.1.5=hc919400_1
-  - xxhash=0.8.3=haa4e116_0
-  - yaml=0.2.5=h925e9cb_3
-  - zlib=1.3.1=h8359307_2
-  - zlib-ng=2.3.3=hed4e4f5_1
-  - zstd=1.5.7=hbf9d68e_6
+  - python=3.10
+  - pip
+  - numpy
+  - pandas
+  - scipy
+  - tqdm
+  - pillow
+  - pyarrow
+  - ffmpeg
+  - pytorch-cuda
+  - torchvision
+  - torchaudio
+  - accelerate
+  - datasets
   - pip:
       - aiohttp==3.12.14
       - alembic==1.16.4
@@ -248,41 +25,30 @@ dependencies:
       - async-timeout==4.0.3
       - asyncer==0.0.8
       - audioread==3.0.1
-      - av==16.1.0
       - backoff==2.2.1
       - bitsandbytes==0.49.0
+      - bm25s==0.2.14
       - cachetools==6.1.0
-      - chardet==5.2.0
       - click==8.2.1
       - cloudpickle==3.1.1
       - colorlog==6.9.0
-      - contourpy==1.3.2
-      - cycler==0.12.1
       - dataclasses-json==0.6.7
-      - decorator==5.2.1
-      - diskcache==5.6.3
-      - fonttools==4.61.1
+      - distro==1.9.0
+      - frozenlist==1.7.0
       - fsspec==2024.12.0
-      - gitdb==4.0.12
-      - gitpython==3.1.46
       - google-ai-generativelanguage==0.9.0
-      - google-api-core==2.29.0
       - google-auth==2.42.1
       - google-genai==1.48.0
-      - googleapis-common-protos==1.72.0
       - graphiti-core==0.20.4
       - greenlet==3.2.3
-      - grpcio==1.78.0
-      - grpcio-status==1.48.2
       - httpx-sse==0.4.1
-      - huggingface-hub==0.36.2
-      - jiter==0.13.0
       - joblib==1.5.1
       - json-repair==0.44.1
-      - kiwisolver==1.4.9
+      - jsonpatch==1.33
       - langchain==0.3.26
       - langchain-community==0.3.27
-      - langchain-core==0.3.69
+      - langchain-core
+      - langchain-google-genai
       - langchain-experimental==0.3.4
       - langchain-openai==0.3.28
       - langchain-text-splitters==0.3.8
@@ -291,56 +57,41 @@ dependencies:
       - langgraph-prebuilt==0.5.2
       - langgraph-sdk==0.1.74
       - langsmith==0.4.7
-      - lazy-loader==0.4
       - librosa==0.11.0
       - llvmlite==0.44.0
       - magicattr==0.1.6
       - mako==1.3.10
       - markdown-it-py==3.0.0
       - marshmallow==3.26.1
-      - matplotlib==3.10.8
       - mdurl==0.1.2
       - msgpack==1.1.1
       - mypy-extensions==1.1.0
-      - neo4j==6.1.0
       - numba==0.61.2
       - numpy==1.26.2
       - openai==1.97.0
       - optuna==4.4.0
-      - orjson==3.11.7
       - ormsgpack==1.10.0
-      - platformdirs==4.5.1
       - pooch==1.8.2
       - posthog==6.7.4
       - propcache==0.3.2
-      - proto-plus==1.27.1
       - protobuf==3.20.3
-      - pycparser==3.0
       - pydantic==2.11.7
-      - pydantic-core==2.33.2
       - pydantic-settings==2.10.1
-      - pygments==2.19.2
       - pyparsing==3.2.3
       - pypdf==6.0.0
       - pysrt==1.1.2
-      - python-dotenv==1.2.1
       - qwen-omni-utils==0.0.8
       - qwen-vl-utils==0.0.11
       - regex==2025.7.34
+      - requests-toolbelt==1.0.0
       - rich==14.1.0
       - rsa==4.9.1
-      - scikit-learn==1.7.2
       - seaborn==0.13.2
-      - sentry-sdk==2.52.0
-      - smmap==5.0.2
-      - soundfile==0.13.1
+      - shellingham==1.5.4
       - soxr==0.5.0.post1
       - sqlalchemy==2.0.41
-      - sympy==1.13.1
-      - threadpoolctl==3.6.0
-      - tiktoken==0.12.0
+      - tenacity==9.1.2
       - tokenizers==0.21.2
-      - tomli==2.4.0
       - transformers==4.53.2
       - typer==0.17.4
       - types-pyyaml==6.0.12.20250822
